# Efficient-MoE-FT-Test

./: README.md
egm_test/: CMakeLists.txt  README.md  egm_test.cu
egm_test_new/: CODE_REVIEW.md  DATA_SIZE_GUIDE.md  Makefile  README.md  egm_bandwidth_test.cu  test_bandwidth_sweep.sh
